fix: collapse animate

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,11 +1,8 @@
-.r-collapse-wrapper {
-  @apply cursor-pointer text-lg flex items-center justify-between;
+.r-collapse-title {
+  @apply cursor-pointer text-lg flex items-center justify-between relative;
 }
 
-.r-collapse-close {
-  @apply h-[0%] leading-[0] overflow-hidden;
-}
-
-.r-collapse-open {
-  @apply h-[100%];
+.r-collapse-content {
+  @apply transition-height relative overflow-hidden;
+  will-change: height;
 }
